# MODELO-CRUD-EDITORA

./: manage.py  pyproject.toml
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_livro_autor_remove_livro_editora_and_more.py  0003_editora_formato.py  0004_livro.py  0005_cliente_aluguel.py  0006_delete_aluguel.py  0007_aluguel.py  0008_cliente_sexo.py
core/templates/: base.html
core/templates/portal/: autor.html  autor_add.html  autor_edit.html  cliente.html  cliente_add.html  cliente_edit .html  cliente_edit.html  formato.html  home.html  menu.html
editora/: asgi.py  settings.py  urls.py  wsgi.py
